--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Squadella/ManaZeak#readme",
   "devDependencies": {
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.9.1"
   }
 }
